// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sort snapshots 1`] = `
<button
  className="button-inline"
  onClick={[Function]}
  type="button"
>
  <span
    aria-hidden={true}
    className="fa fa-"
    style={
      Object {
        "color": "black",
        "textShadow": "0 1px 0 rgba(0, 0, 0, 0.1)",
      }
    }
  />
  More
</button>
`;

exports[`Table snapshots 1`] = `
<div
  className="table"
>
  <div
    className="table-header"
  >
    <span
      style={
        Object {
          "width": "40%",
        }
      }
    >
      <button
        className="button-inline"
        onClick={[Function]}
        type="button"
      >
        <span
          aria-hidden={true}
          className="fa fa-"
          style={
            Object {
              "color": "black",
              "textShadow": "0 1px 0 rgba(0, 0, 0, 0.1)",
            }
          }
        />
         Title
      </button>
    </span>
    <span
      style={
        Object {
          "width": "30%",
        }
      }
    >
      <button
        className="button-inline"
        onClick={[Function]}
        type="button"
      >
        <span
          aria-hidden={true}
          className="fa fa-"
          style={
            Object {
              "color": "black",
              "textShadow": "0 1px 0 rgba(0, 0, 0, 0.1)",
            }
          }
        />
         Author
      </button>
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      <button
        className="button-inline"
        onClick={[Function]}
        type="button"
      >
        <span
          aria-hidden={true}
          className="fa fa-"
          style={
            Object {
              "color": "black",
              "textShadow": "0 1px 0 rgba(0, 0, 0, 0.1)",
            }
          }
        />
         Comments
      </button>
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      <button
        className="button-inline"
        onClick={[Function]}
        type="button"
      >
        <span
          aria-hidden={true}
          className="fa fa-"
          style={
            Object {
              "color": "black",
              "textShadow": "0 1px 0 rgba(0, 0, 0, 0.1)",
            }
          }
        />
         Points
      </button>
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    />
  </div>
  <div
    className="table-row"
  >
    <span
      style={
        Object {
          "width": "40%",
        }
      }
    >
      <a
        href={undefined}
      >
        1
      </a>
    </span>
    <span
      style={
        Object {
          "width": "30%",
        }
      }
    >
      1
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      1
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      2
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      <button
        className="button-inline"
        onClick={[Function]}
        type="button"
      >
        Dismiss
      </button>
    </span>
  </div>
  <div
    className="table-row"
  >
    <span
      style={
        Object {
          "width": "40%",
        }
      }
    >
      <a
        href={undefined}
      >
        2
      </a>
    </span>
    <span
      style={
        Object {
          "width": "30%",
        }
      }
    >
      2
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      1
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      2
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      <button
        className="button-inline"
        onClick={[Function]}
        type="button"
      >
        Dismiss
      </button>
    </span>
  </div>
</div>
`;
